--- a/AndroidMaster/app/src/main/AndroidManifest.xml
+++ b/AndroidMaster/app/src/main/AndroidManifest.xml
@@ -12,6 +12,15 @@
         android:theme="@style/Theme.AndroidMaster"
         tools:targetApi="31">
         <activity
+            android:name=".layouts.ConstraintLayoutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".layouts.LinearLayoutActivity"
+            android:exported="false" />
+        <activity
+            android:name=".layouts.FrameLayoutActivity"
+            android:exported="false" />
+        <activity
             android:name=".firstapp.ResultActivity"
             android:exported="false" />
         <activity
