--- a/AndroidMaster/app/src/main/AndroidManifest.xml
+++ b/AndroidMaster/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:theme="@style/Theme.AndroidMaster"
         tools:targetApi="31">
         <activity
+            android:name=".layouts.ConstraintLayoutActivityV2"
+            android:exported="false" />
+        <activity
             android:name=".layouts.ConstraintLayoutActivity"
             android:exported="false" />
         <activity
