--- a/AndroidMaster/app/src/main/AndroidManifest.xml
+++ b/AndroidMaster/app/src/main/AndroidManifest.xml
@@ -12,6 +12,18 @@
         android:theme="@style/Theme.AndroidMaster"
         tools:targetApi="31">
         <activity
+            android:name=".imccalculator.ImcCalculatorActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MenuActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
             android:name=".layouts.ConstraintLayoutActivityV2"
             android:exported="false" />
         <activity
@@ -28,13 +40,7 @@
             android:exported="false" />
         <activity
             android:name=".firstapp.FirstAppActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="true"></activity>
     </application>
 
 </manifest>
