--- a/AndroidMaster/app/src/main/AndroidManifest.xml
+++ b/AndroidMaster/app/src/main/AndroidManifest.xml
@@ -12,6 +12,10 @@
         android:theme="@style/Theme.AndroidMaster"
         tools:targetApi="31">
         <activity
+            android:name=".todoapp.ToDoActivity"
+            android:exported="false"
+            android:theme="@style/Theme.ToDoApp" />
+        <activity
             android:name=".imccalculator.ResultIMCActivity"
             android:exported="false" />
         <activity
