--- a/AndroidMaster/app/src/main/AndroidManifest.xml
+++ b/AndroidMaster/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.AndroidMaster"
         tools:targetApi="31">
         <activity
+            android:name=".superheroapp.DetailSuperHeroActivity"
+            android:exported="false" />
+        <activity
             android:name=".superheroapp.SuperHeroListActivity"
             android:exported="false" />
         <activity
