--- a/HarryPotterApp/app/build.gradle
+++ b/HarryPotterApp/app/build.gradle
@@ -67,6 +67,8 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.8'
     // BottomNavigationView
     implementation 'com.google.android.material:material:<version>'
+    // Transición de volteo
+    implementation 'androidx.transition:transition:1.4.0'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
