--- a/flutter_projects/mynotes/flutter_launcher_icons.yaml
+++ b/flutter_projects/mynotes/flutter_launcher_icons.yaml
@@ -4,5 +4,5 @@ dev_dependencies:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/icon/icon.png"
+  image_path: "assets/icon/icons.png"
   remove_alpha_ios: true
