--- a/flutter_projects/harry_potter_app/pubspec.yaml
+++ b/flutter_projects/harry_potter_app/pubspec.yaml
@@ -82,7 +82,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
+  fonts:
+    - family: Apple Days
+      fonts:
+        - asset: fonts/apple_days.ttf
   #   - family: Schyler
   #     fonts:
   #       - asset: fonts/Schyler-Regular.ttf
