--- a/flutter_projects/harry_potter_app/pubspec.yaml
+++ b/flutter_projects/harry_potter_app/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   bloc: ^8.1.2
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
+  cached_network_image: ^3.0.0
   # dcdg: ^4.1.0
 
 dev_dependencies:
